<resources>
    <string name="app_name">MediaPlayerApplication</string>
    <string name="Abba">Abba</string>
    <string name="Bach">Bach</string>
    <string name="Beatles">Beatles</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="rewind"><![CDATA[<<]]></string>
    <string name="forward"><![CDATA[>>]]></string>
    <string name="pause">||</string>
    <string name="play">Play</string>
    <string name="music">Music Player</string>


</resources>
